--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,6 @@
 			<scope>test</scope>
 		</dependency>
 
-
 		<dependency>
 			<groupId>${swt.groupId}</groupId>
       		<artifactId>${swt.artifactId}</artifactId>
@@ -115,7 +114,7 @@
 		</plugins>
 	</build>
 
-	<profiles>
+	<profiles> <!-- detects only Java type, system stays undetected for some reason -->
 		<profile>
 			<id>windows32</id>
 			<activation>
