updated build options and instructions

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>${swt.groupId}</groupId>
+			<groupId>org.eclipse.swt</groupId>
       		<artifactId>${swt.artifactId}</artifactId>
 			<version>4.2.2</version>
 		</dependency>
@@ -91,7 +91,7 @@
 							<mainClass>ee.knowit.university.Main</mainClass>
 						</manifest>
 					</archive>
-					<finalName>university</finalName>
+					<finalName>university_${jar.name.postfix}</finalName>
 				</configuration>
 				<executions>
 					<execution>
@@ -113,39 +113,60 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	
+	
+	
 
-	<profiles> <!-- detects only Java type, system stays undetected for some reason -->
+	<profiles>
 		<profile>
-			<id>windows32</id>
-			<activation>
-				<os>
-					<family>Windows</family>
-				</os>
-				<property>
-      				<name>sun.arch.data.model</name>
-      				<value>32</value>
-    			</property>
-			</activation>
+			<id>windows32</id>			
 			<properties>
-				<swt.groupId>org.eclipse.swt</swt.groupId>
 				<swt.artifactId>org.eclipse.swt.win32.win32.x86</swt.artifactId>
+				<jar.name.postfix>win32</jar.name.postfix>
 			</properties>
 		</profile>
 		<profile>
-			<id>windows64</id>
-			<activation>
-				<os>
-					<family>Windows</family>
-				</os>
-				<property>
-      				<name>sun.arch.data.model</name>
-      				<value>64</value>
-    			</property>
-			</activation>
+			<id>windows64</id>			
 			<properties>
-				<swt.groupId>org.eclipse.swt</swt.groupId>
 				<swt.artifactId>org.eclipse.swt.win32.win32.x86_64</swt.artifactId>
+				<jar.name.postfix>win64</jar.name.postfix>
+			</properties>
+			<activation>
+		      <activeByDefault>true</activeByDefault>
+		    </activation>
+		</profile>
+		
+		<profile>
+			<id>macosx32</id>			
+			<properties>
+				<swt.artifactId>org.eclipse.swt.cocoa.macosx</swt.artifactId>
+				<jar.name.postfix>macosx32</jar.name.postfix>
 			</properties>
 		</profile>
+		<profile>
+			<id>macosx64</id>			
+			<properties>
+				<swt.artifactId>org.eclipse.swt.cocoa.macosx.x86_64</swt.artifactId>
+				<jar.name.postfix>macosx64</jar.name.postfix>
+			</properties>
+		</profile>
+		
+		<profile>
+			<id>linux32</id>			
+			<properties>
+				<swt.artifactId>org.eclipse.swt.gtk.linux.x86</swt.artifactId>
+				<jar.name.postfix>gtk_linux32</jar.name.postfix>
+			</properties>
+		</profile>
+		<profile>
+			<id>linux64</id>			
+			<properties>
+				<swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
+				<jar.name.postfix>gtk_linux64</jar.name.postfix>
+			</properties>
+		</profile>
+		
 	</profiles>
+
 </project>
